@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/aesutil
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/aesutil/ChangeLog,v 1.6 2008/02/04 20:26:59 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/aesutil/ChangeLog,v 1.7 2008/12/30 16:35:22 mpagano Exp $
+
+  30 Dec 2008; Mike Pagano <mpagano@gentoo.org> aesutil-1.0.7.ebuild:
+  Fixed hardcoded CC as per bug #243534
 
   04 Feb 2008; Fabian Groffen <grobian@gentoo.org> aesutil-1.0.7.ebuild:
   Dropped ppc-macos keyword, see you in prefix
